--- a/9.2/Dockerfile.rhel7
+++ b/9.2/Dockerfile.rhel7
@@ -1,6 +1,6 @@
 FROM rhel7
 
-# PostgreSQL image for OpenShift.
+# PostgreSQL image for DeployDock.
 # Volumes:
 #  * /var/lib/psql/data   - Database cluster for PostgreSQL
 # Environment:
@@ -10,7 +10,7 @@ FROM rhel7
 #  * $POSTGRESQL_ADMIN_PASSWORD (Optional) - Password for the 'postgres'
 #                           PostgreSQL administrative account
 
-MAINTAINER SoftwareCollections.org <sclorg@redhat.com>
+MAINTAINER Eric Sites <eric@meros.io>
 
 ENV POSTGRESQL_VERSION=9.2 \
     HOME=/var/lib/pgsql \
@@ -18,12 +18,12 @@ ENV POSTGRESQL_VERSION=9.2 \
 
 LABEL io.k8s.description="PostgreSQL is an advanced Object-Relational database management system" \
       io.k8s.display-name="PostgreSQL 9.2" \
-      io.openshift.expose-services="5432:postgresql" \
-      io.openshift.tags="database,postgresql,postgresql92"
+      io.deploydock.expose-services="5432:postgresql" \
+      io.deploydock.tags="database,postgresql,postgresql92"
 
 # Labels consumed by Red Hat build service
 LABEL Component="postgresql92" \
-      Name="openshift3/postgresql-92-rhel7" \
+      Name="deploydock/postgresql-92-rhel7" \
       Version="9.2" \
       Release="1"
 
