--- a/9.2/contrib/deploydock-custom-recovery.conf.template
+++ b/9.2/contrib/deploydock-custom-recovery.conf.template
@@ -1,5 +1,5 @@
 #
-# Custom OpenShift configuration.
+# Custom DeployDock configuration.
 #
 # NOTE: This file is rewritten every time the container is started!
 #       Changes to this file will be overwritten.
